--- a/Javascript-form-assignment/CSS/form.css
+++ b/Javascript-form-assignment/CSS/form.css
@@ -20,4 +20,9 @@
     background-color: black;
     color: white;
     padding: 12px;
+   
+    
+}
+.submit:focus{
+    border: 3px solid white;
 }
